--- a/index.html
+++ b/index.html
@@ -9,19 +9,40 @@
 </head>
   <body>
     <h1>Michael Bootstrap Challenge!</h1>
-    <div class="container">
-        <div class="row">
-            <div class="col">
-                <p>This is a card-1</p>
-                <img src="https://via.placeholder.com/150">
+    <div class="container-fluid justify-content-center">
+        <div class="row bg-secondary justify-content-evenly">
+            <!-- card 1 -->
+            <div class="col-2 bg-danger d-flex justify-content-center">
+                <div class="card" style="width: 18rem;">
+                    <img src="https://via.placeholder.com/150" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Card title</h5>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                  </div>
             </div>
-            <div class="col">
-                <p>This is a card-2</p>
-                <img src="https://via.placeholder.com/150">
+            <!-- card 2 -->
+            <div class="col-2 bg-danger d-flex justify-content-center">
+                <div class="card" style="width: 18rem;">
+                    <img src="https://via.placeholder.com/150" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Card title</h5>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                  </div>
             </div>
-            <div class="col">
-                <p>This is a card-3</p>
-                <img src="https://via.placeholder.com/150">
+            <!-- card 3 -->
+            <div class="col-2 bg-danger d-flex justify-content-center">
+                <div class="card" style="width: 18rem;">
+                    <img src="https://via.placeholder.com/150" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Card title</h5>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                  </div>
             </div>
         </div>
     </div>
